# unnamed_cms

./: .gitignore  Cargo.toml  LICENSE  input.css  tailwind.config.js  tailwind.sh
lib/: Cargo.toml
lib/src/: cms.rs  lib.rs  prelude.rs
lib/src/api/html/: auth.rs  collections.rs  content.rs  index.rs  mod.rs
lib/src/config/: app_data.rs  app_state.rs  database.rs  mod.rs  routes.rs
lib/src/config/database/: mod.rs
lib/src/config/database/models/: info.rs  mod.rs  (+4 more)
lib/src/config/security/: claims.rs  middlware.rs  mod.rs
lib/src/middleware/: authentication.rs  authorization.rs  collection_data.rs  mod.rs
lib/src/service/: auth.rs  auth_service.rs  collections.rs  collections_service.rs  content.rs  mod.rs
lib/src/utils/: errors.rs  extensions.rs  forms.rs  mod.rs  query_strings.rs
lib/src/utils/query_strings/: create_collection.surql  create_resource.surql  create_session.surql  delete_session.surql  index_definition.rs  misc.rs  mod.rs  provisionings.rs  refresh_session.surql  select_all_from_collection.surql  select_named_from_collection.surql  select_user_by_credentials.surql  setup_database.surql  table_definitions.rs  table_field_definitions.rs  user_queries.rs
lib/src/views/: index.rs
lib/static/css/: styles.css
lib/static/js/: collections_+.js
lib/templates/: collections.html  collections_+.html  content.html  content_add.html  index.html  login.html
lib/templates/components/: README.md  field.html  new_collection.html  records.html  sidebar.html
lib/templates/containers/: README.md  base.html  collections.html  content.html
(+9 files in other folders)
