[package]
name = "unnamed_cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# macros = ["actix-web-codegen"]

[dependencies]
actix-web = "4.4.0"
surrealdb = "1.0.0"
tera = "1.19.1"
futures-util = "0.3.29"
jsonwebtoken = "9.1.0"
serde = "1.0.190"
chrono = "0.4.31"
async-trait = "0.1.74"
actix-files = "0.6.2"
regex = "1.10.2"
